--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.2.7",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
